--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <!--Font Awesome-->
     <link rel="stylesheet" href="./assets/font/css/all.min.css">
     <!--Bootstrap-->
@@ -67,7 +67,7 @@
                 <!-- Logo -->
                 <div class="header__left--logo">
                     <a href="index.html">
-                        <img src="./assets/image/logo.png.webp" alt="Logo" id="logo">
+                        <img src="./assets/image/logo.png" alt="Logo" id="logo">
                     </a>
 
                 </div>
@@ -129,7 +129,7 @@
         <div class="section">
             <div class="section__1">
                 <div class="section--image">
-                    <img src="./assets/image/Heaphone/1.webp" alt="Section1" id="pro-section-1">
+                    <img src="./assets/image/Heaphone/1.png" alt="Section1" id="pro-section-1">
                 </div>
                 <div class="section__detail">
                     <div class="section__deatil--name">
@@ -164,7 +164,7 @@
 
                 </div>
                 <div class="section--image">
-                    <img src="./assets/image/Heaphone/2.webp" alt="Section1" id="pro-section-2">
+                    <img src="./assets/image/Heaphone/2.png" alt="Section1" id="pro-section-2">
                 </div>
             </div>
 
@@ -282,7 +282,7 @@
 
     <!--Begin Banner-->
     <div class="wrapper6">
-        <img src="./assets/image/bg-3.webp" alt="">
+        <!-- <img src="./assets/image/bg-3.webp" alt=""> -->
 
         <div class="blog__title">
             <hr id="mid">
@@ -360,11 +360,11 @@
     <!--Begin Footer-->
     <div class="wrapper7">
         <div class="footer">
-            <img src="./assets/image/Heaphone/footer.webp" alt="" id="note">
+            <img src="./assets/image/Heaphone/footer.png" alt="" id="note">
             <div class="opacity">
             </div>
             <div class="footer__logo">
-                <img src="./assets/image/logo.png.webp" alt="">
+                <img src="./assets/image/logo.png" alt="">
             </div>
             <div class="footer--slogan">
                 <h2>Subscribe Our Newsletter</h2>
