--- a/createAccount.html
+++ b/createAccount.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/image/icon.png">
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -35,7 +36,7 @@
                 <div class="header__left">
                     <div class="header__left--logo">
                         <a href="index.html">
-                            <img src="./assets/image/logo.png.webp" alt="Logo">
+                            <img src="./assets/image/logo.png" alt="Logo">
                         </a>
 
                     </div>
@@ -108,11 +109,11 @@
     <!--Begin Footer-->
     <div class="wrapper7" id="footercatalog">
         <div class="footer">
-            <img src="./assets/image/Heaphone/footer.webp" alt="" id="note">
+            <img src="./assets/image/Heaphone/footer.png" alt="" id="note">
             <div class="opacity">
             </div>
             <div class="footer__logo">
-                <img src="./assets/image/logo.png.webp" alt="">
+                <img src="./assets/image/logo.png" alt="">
             </div>
             <div class="footer--slogan">
                 <h2>Subscribe Our Newsletter</h2>
