--- a/service.html
+++ b/service.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/image/icon.png">
     <!--Style CSS-->
     <link rel="stylesheet" href="./assets/css/service.css">
     <!--Font Awesome-->
     <link rel="stylesheet" href="./assets/font/css/all.min.css">
-    <title>Dịch Vụ</title>
+    <title>Service</title>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
                 <div class="header__left">
                     <div class="header__left--logo">
                         <a href="index.html">
-                            <img src="./assets/image/logo.png.webp" alt="Logo">
+                            <img src="./assets/image/logo.png" alt="Logo">
                         </a>
 
                     </div>
@@ -185,11 +186,11 @@
     <!--Begin Footer-->
     <div class="wrapper7" id="footercatalog">
         <div class="footer">
-            <img src="./assets/image/Heaphone/footer.webp" alt="" id="note">
+            <img src="./assets/image/Heaphone/footer.png" alt="" id="note">
             <div class="opacity">
             </div>
             <div class="footer__logo">
-                <img src="./assets/image/logo.png.webp" alt="">
+                <img src="./assets/image/logo.png" alt="">
             </div>
             <div class="footer--slogan">
                 <h2>Subscribe Our Newsletter</h2>
