152021_responsive_category version1

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <!--Font Awesome-->
-    <link rel="stylesheet" href="./assets/font/css/all.min.css">
     <!--Bootstrap-->
 
     <!-- Latest compiled and minified CSS -->
@@ -19,7 +17,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 
     <link rel="icon" href="./assets/image/icon.png">
-
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="./assets/font/css/all.min.css">
     <!--Style-->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!--JS-->
@@ -37,9 +36,6 @@
         <div class="header">
             <!--Header Navbar-->
             <div class="header__nav">
-<!--            <div class="header__left">
-
-                </div> -->
                 <input type="checkbox" name="" hidden  id="nav-mobile-input" class="nav__input">
                 <!-- Bar Mobile -->
                 
@@ -91,9 +87,28 @@
                     </ul>
                 </div>
                 <div class="header__action">
-                    <img src="./assets/image/1024px-Flag_of_Vietnam.svg.png" alt="T o day " id="language">
-                    <p id="language-text">VIE <span><i class="fas fa-chevron-down" style="color: rgb(0, 0, 0);margin-right:-11px" id="arrow-down"></i></span></p>
-                    
+<!--                     <img src="./assets/image/1024px-Flag_of_Vietnam.svg.png" alt="T o day " id="language">
+                    <p id="language-text">VIE <span><i class="fas fa-chevron-down" style="color: rgb(0, 0, 0);margin-right:-11px" id="arrow-down"></i></span></p> -->
+                    <div class="lang-menu">
+                        <div class="selected-lang">
+                            VIETNAM
+                        </div>
+
+                        <ul>
+                            <li>
+                                <a href="#" class="de">German</a>
+                            </li>
+                            <li>
+                                <a href="" class="en">English</a>
+                            </li>
+                            <li>
+                                <a href="" class="fr">French</a>
+                            </li>
+                            <li>
+                                <a href="" class="kr">Korea</a>
+                            </li>
+                        </ul>
+                    </div>
 
                     <a href="cart.html" id="cart"><i class="fas fa-shopping-bag"></i></a>
 
