252021_responsive_detail_ver1

--- a/catalog.html
+++ b/catalog.html
@@ -17,6 +17,8 @@
   <!-- Filter in Responsive -->
   <input type="checkbox" id="filter" hidden class="showFilter">
   <label for="filter" class="filterBy"><i class="fas fa-filter"></i></label>
+  <!-- Nav Overlay -->
+  <label for="filter" class="nav__overlay-category"></label>
 
   <div class="" id="aside-bar-mobile">
     <label for="filter"><i class="fas fa-times exit"></i></label>
