--- a/blog.html
+++ b/blog.html
@@ -19,45 +19,91 @@
         <div class="header">
             <!--Header Navbar-->
             <div class="header__nav">
-                <div class="header__left">
-                    <div class="header__left--logo">
-                        <a href="index.html">
-                            <img src="./assets/image/logo.png" alt="Logo">
-                        </a>
+                <!--            <div class="header__left">
 
-                    </div>
-                    <div class="header__left--menu">
-                        <ul class="menu-list">
-                            <li class="menu-item active"><a href="index.html" >Home</a></li>
-                            <li class="menu-item"><a href="catalog.html" >Catalog</a></li>
-                            <li class="menu-item"><a href="blog.html" >Blog</a></li>
-                            <li class="menu-item dropdown" id="linkSub"><a href="#" >Pages</a>
-                                <ul class="sub-menu">
-                                    <li class="sub-menuItem"><a href="about.html" >About</a></li>
+              </div> -->
+                <input type="checkbox" name="" hidden id="nav-mobile-input" class="nav__input">
+                <!-- Bar Mobile -->
 
-                                    <li class="sub-menuItem"><a href="service.html">Service</a></li>
+                <label for="nav-mobile-input" class="nav_bars-btn"><i class="fas fa-bars"></i></label>
 
-                                    <li class="sub-menuItem"><a href="faq.html" >Faq</a></li>
+                <!-- Nav Overlay -->
+                <label for="nav-mobile-input" class="nav__overlay"></label>
 
-                                    <li class="sub-menuItem"><a href="contact.html">Contact</a></li>
-                                </ul>
+                <!-- Nav-mobile -->
+                <div class="nav-mobile" id="nav_mobile">
+
+                    <label for="nav-mobile-input" class="nav_mobile-close"><i class="fas fa-times"></i></label>
+                    <ul class="nav_mobile-list">
+                        <li class="nav_mobile-link active"><i class="fas fa-home"></i><a href="index.html">Home</a></li>
+                        <li class="nav_mobile-link"><i class="fas fa-th-list"></i><a href="catalog.html">Catalog</a>
+                        </li>
+                        <li class="nav_mobile-link"><i class="fas fa-blog"></i><a href="blog.html">Blog</a></li>
+                        <li class="nav_mobile-link"><i class="fas fa-building"></i><a href="about.html">About</a></li>
+                        <li class="nav_mobile-link"><i class="fas fa-basketball-ball"></i><a
+                                href="service.html">Service</a></li>
+                        <li class="nav_mobile-link"><i class="fas fa-question"></i><a href="faq.html">Faq</a></li>
+                        <li class="nav_mobile-link"><i class="fas fa-id-card"></i><a href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                    </li>
+                    </ul>
+                </div>
+                <!-- Logo -->
+                <div class="header__left--logo">
+                    <a href="index.html">
+                        <img src="./assets/image/logo.png" alt="Logo" id="logo">
+                    </a>
+
+                </div>
+                <!-- Navigation pc -->
+                <div class="header__left--menu" id="nav-pc">
+                    <ul class="menu-list">
+                        <li class="menu-item active"><a href="index.html">Home</a></li>
+                        <li class="menu-item"><a href="catalog.html">Catalog</a></li>
+                        <li class="menu-item"><a href="blog.html">Blog</a></li>
+                        <li class="menu-item dropdown" id="linkSub"><a href="#">Pages</a>
+                            <ul class="sub-menu">
+                                <li class="sub-menuItem"><a href="about.html">About</a></li>
+
+                                <li class="sub-menuItem"><a href="service.html">Service</a></li>
+
+                                <li class="sub-menuItem"><a href="faq.html">Faq</a></li>
+
+                                <li class="sub-menuItem"><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="header__action">
+
+                    <div class="lang-menu">
+                        <div class="selected-lang">
+                            VIETNAM
+                        </div>
+
+                        <ul>
+                            <li>
+                                <a href="#" class="de">German</a>
+                            </li>
+                            <li>
+                                <a href="" class="en">English</a>
+                            </li>
+                            <li>
+                                <a href="" class="fr">French</a>
+                            </li>
+                            <li>
+                                <a href="" class="kr">Korea</a>
                             </li>
                         </ul>
                     </div>
-                </div>
-                <div class="header__right">
-                    <img src="./assets/image/1024px-Flag_of_Vietnam.svg.png" alt="T o day ">
-                    <p>VIE</p>
-                    <i class="fas fa-chevron-down" style="color: rgb(0, 0, 0);margin-right:-11px"></i>
 
-                    <a href="cart.html"><i class="fas fa-shopping-bag"></i></a>
+                    <a href="cart.html" id="cart"><i class="fas fa-shopping-bag"></i></a>
 
+                    <a href="login.html" id="arrow-down"><i class="fas fa-user"></i></a>
 
-                    <a href="login.html"><i class="fas fa-user"></i></a>
                 </div>
             </div>
-
-
         </div>
     </div>
     <!--End Header-->
@@ -117,26 +163,22 @@
                     </div>
 
                     <div class="aside__category">
-                        <h4>Catalog</h4>
+                        <h4>Categories</h4>
                         <ul class="menu-category">
                             <li class="menu-item">
-                                <a href="#">Nike</a>
+                                <a href="#">Earbud</a>
                                 <!-- <span><i class="fas fa-plus"></i></span> -->
                             </li>
                             <li class="menu-item">
-                                <a href="#">Adidas</a>
+                                <a href="#">Music</a>
                                 <!-- <span><i class="fas fa-plus"></i></span> -->
                             </li>
                             <li class="menu-item">
-                                <a href="#">Puma</a>
+                                <a href="#">Sports</a>
                                 <!-- <span><i class="fas fa-plus"></i></span> -->
                             </li>
                             <li class="menu-item">
-                                <a href="#">Converse</a>
-                                <!-- <span><i class="fas fa-plus"></i></span> -->
-                            </li>
-                            <li class="menu-item">
-                                <a href="#">Yezzy</a>
+                                <a href="#">Wireless</a>
                                 <!-- <span><i class="fas fa-plus"></i></span> -->
                             </li>
 
@@ -155,9 +197,9 @@
                                 <li class="vote-item"><i class="fas fa-star"></i></li>
                             </ul>
                             <a href="#">
-                                <h4 class="seller">Kyrie 7EP 'Play for the Future'</h4>
+                                <h4 class="seller">Comfort Earphone</h4>
                             </a>
-                            <p>9.750.000 đ</p>
+                            <p>$910.00</p>
                         </div>
                     </div>
                     <!--
